updated w/ new portfolio

--- a/contact.html
+++ b/contact.html
@@ -13,50 +13,109 @@
 </head>
 <body>
 
-<section id="main">
-	<h1>Contact Form</h1>
-	<form action="https://docs.google.com/forms/d/e/1FAIpQLScSJtsS8IhSgWqKRuJw2oazazlphHSfSBhVe_hzT10GCFch2w/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on"><ol role="list" class="ss-question-list" style="padding-left: 0;">
-		<div class="center">
-			<img src="images/logo.jpg" alt="Yashasvi Logo" />
+<section id="main-header">
+	<div class="main">
+		<img src="images/mail.svg" alt="Email" width="200" height="200" style="margin-top: 100px;" />
+			<div class="full-nav">
+			<nav id="nav">
+				<div class="dropdown">
+					<a class="dropbtn" href="index.html">Home</a>
+				</div>
+
+				<div class="dropdown">
+					<a class="dropbtn" href="#">Services</a>
+					<div class="dropdown-content">
+						<a class="nav-links" href="data-center-consulting.html">Data Center Consulting</a>
+						<a class="nav-links" href="cloud-consulting.html">Cloud Consulting</a>
+						<a class="nav-links" href="it-transformation.html">IT Transformation</a>
+						<a class="nav-links" href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a>
+						<a class="nav-links" href="network-collab.html">Network and Collaboration</a>
+						<a class="nav-links" href="compute-storage-backup.html">Compute, Storage and Backup</a>
+						<a class="nav-links" href="end-user-computing.html">End User Computing</a>
+					</div>
+				</div>
+
+				<div class="dropdown">
+					<a class="dropbtn" href="#">Solutions</a>
+					<div class="dropdown-content">
+						<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
+						<a href="cyber-security-solutions.html">Cyber Security</a>
+						<a href="unified-workplace.html">Unified Workplace</a>
+					</div>
+				</div>
+
+				<div class="dropdown">
+					<a class="dropbtn" href="#">Partners</a>
+				</div>
+
+				<div class="dropdown">
+					<a class="dropbtn" href="contact.html">Contact</a>
+				</div>
+			</nav>
 		</div>
-		<h1>Reach out to the team at Yashasvi:</h1><br><br><br><br>
-		<div class="ss-form-question errorbox-good" role="listitem">
-		<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-		<label class="ss-q-item-label" for="entry_1114378236"><div class="ss-q-title"><h2>Individual/Organization Name:</h2>
-		<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-		<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+	</div>
 
-		<input type="text" name="entry.1114378236" value="" class="ss-q-short" id="entry_1114378236" dir="auto" aria-label="Individual/Organization Name:  " aria-required="true" required="" title="">
-		<div class="error-message" id="444479213_errorMessage"></div>
+	<form action="https://docs.google.com/forms/d/e/1FAIpQLScSJtsS8IhSgWqKRuJw2oazazlphHSfSBhVe_hzT10GCFch2w/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
-		</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-		<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
-		<label class="ss-q-item-label" for="entry_1547617845"><div class="ss-q-title"><h2>Subject of query:</h2>
-		<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-		<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+	<h1><u>CONTACT FORM</u></h1>
+	<br>
+	<div class="ss-form-question errorbox-good" role="listitem">
+	<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_1114378236"><div class="ss-q-title">Individual/Organization Name:
+	<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-		<input type="text" name="entry.1547617845" value="" class="ss-q-short" id="entry_1547617845" dir="auto" aria-label="Subject of query:  " aria-required="true" required="" title="">
-		<div class="error-message" id="380146084_errorMessage"></div>
+	<input type="text" name="entry.1114378236" value="" class="ss-q-short" id="entry_1114378236" dir="auto" aria-label="Individual/Organization Name:  " aria-required="true" required="" title="">
+	<div class="error-message" id="444479213_errorMessage"></div>
 
-		</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-		<div dir="auto" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
-		<label class="ss-q-item-label" for="entry_1334383938"><div class="ss-q-title"><h2>Detailed Query:</h2>
-		<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-		<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+	</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+	<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_631925441"><div class="ss-q-title">Email ID:
+	</div>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-		<textarea name="entry.1334383938" rows="8" cols="0" class="ss-q-long" id="entry_1334383938" dir="auto" aria-label="Detailed Query:  " aria-required="true" required=""></textarea>
-		<div class="error-message" id="509588336_errorMessage"></div>
+	<input type="text" name="entry.631925441" value="" class="ss-q-short" id="entry_631925441" dir="auto" aria-label="Email ID:  " title="">
+	<div class="error-message" id="771298952_errorMessage"></div>
 
-		</div></div></div>
-		<input type="hidden" name="draftResponse" value="[null,null,&quot;1863247871405671515&quot;]">
-		<input type="hidden" name="pageHistory" value="0">
+	</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+	<div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_747283542"><div class="ss-q-title">Phone Number:
+	</div>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-		<input type="hidden" name="fbzx" value="1863247871405671515">
-		<div class="ss-send-email-receipt" style="margin-bottom: 4px;" dir="ltr"><label for="emailReceipt" style="display:inline;"></label></div>
-		<div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-			<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
-		</tr></tbody></table></div></ol>
-	</form>
+	<input type="text" name="entry.747283542" value="" class="ss-q-short" id="entry_747283542" dir="auto" aria-label="Phone Number:  " title="">
+	<div class="error-message" id="666224923_errorMessage"></div>
+
+	</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+	<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_1547617845"><div class="ss-q-title">Subject of query:
+	<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+
+	<input type="text" name="entry.1547617845" value="" class="ss-q-short" id="entry_1547617845" dir="auto" aria-label="Subject of query:  " aria-required="true" required="" title="">
+	<div class="error-message" id="380146084_errorMessage"></div>
+
+	</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+	<div dir="auto" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
+	<label class="ss-q-item-label" for="entry_1334383938"><div class="ss-q-title">Detailed Query:
+	<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+	<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+
+	<textarea name="entry.1334383938" rows="8" cols="0" class="ss-q-long" id="entry_1334383938" dir="auto" aria-label="Detailed Query:  " aria-required="true" required=""></textarea>
+	<div class="error-message" id="509588336_errorMessage"></div>
+
+	</div></div></div>
+	<input type="hidden" name="draftResponse" value="[null,null,&quot;-4234249290924452818&quot;]">
+	<input type="hidden" name="pageHistory" value="0">
+
+
+
+	<input type="hidden" name="fbzx" value="-4234249290924452818">
+	<div class="ss-send-email-receipt" style="margin-bottom: 4px;" dir="ltr"><label for="emailReceipt" style="display:inline;"></label></div>
+	<div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
+	<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+	</tr></tbody></table></div></ol></form>
+	<br><br>
 </section>
 
 <section id="footer">
@@ -88,21 +147,20 @@
 					</ul>
 				</section>
 			</div>
+
 			<div class="col-4 col-12-medium">
 				<section>
 					<header>
-						<h2><b>More about Yashasvi?</b></h2>
+						<h2><b>Yashasvi in the News?</b></h2>
 					</header>
 					<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 					<p><b>
-						<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-						<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-						the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-						This is some placeholder content.
+						Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+						Cisco service providers. To read more, follow the link below:
 					</b></p>
 					<footer>
 						<ul class="actions">
-							<li><a href="#" class="button">Find out more</a></li>
+							<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 						</ul>
 					</footer>
 				</section>
