--- a/cyber-security-solutions.html
+++ b/cyber-security-solutions.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/lock.svg" alt="Data Center and Cloud Solutions" />
-					<h1><a href="#">Cyber Security Solutions</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/data-protection.svg" alt="Cyber Security Solutions" />
+					<h1><a href="#"><b>Cyber Security Solutions</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -58,7 +59,7 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h3>Data Security Architecture and Design</h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Security Architecture and Design</b></h3>
 									</header>
 									<p>
 										Yashasvi understands the high costs and challenges of safeguarding today’s complex and rapidly changing IT environment.
@@ -75,9 +76,9 @@
 									</p>
 									<section>
 										<header>
-											<h3>Enterprise Infrastructure Security</h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Enterprise Infrastructure Security</b></h3>
 											<br>
-											<h3>Infrastructure Security</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Infrastructure Security</b></h3>
 										</header>
 										<p>
 											Yashasvi understands the challenges to defend the perimeter is an enormous task that includes many considerations, from firewalls to end points, networking, and web and email gateways.
@@ -94,7 +95,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Secure Mobility</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Secure Mobility</b></h3>
 										</header>
 										<p>
 											Yashasvi understands the essence of Mobility for organization to remain relevant in the internet age.
@@ -105,17 +106,17 @@
 									</section>
 									<section>
 										<header>
-											<h3>Secure Cloud</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Secure Cloud</b></h3>
 										</header>
 										<p>
-											But a Yashasvi understands the shift to the cloud must be done right the first time. A wrong can cause loss of business and brand.
+											Yashasvi understands the shift to the cloud must be done right the first time. A wrong can cause loss of business and brand.
 											Our Cloud Enablement provides the expertise and technologies to migrate and secure cloud environment (public/hybrid).
-											Our cloud consulting is comprehensive and covers all aspects of security. We assess, design and deploy cloud security
+											Our cloud consulting is comprehensive and covers all aspects of security. We assess, design and deploy cloud security solutions.
 										</p>
 									</section>
 									<section>
 										<header>
-											<h3>Identity and Access Management</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Identity and Access Management</b></h3>
 										</header>
 										<p>
 											Yashasvi provides the solutions for enterprise and cloud to maintain control of user access rights.
@@ -129,12 +130,13 @@
 						<section class="box">
 							<img src="images/link.svg" alt="Link" width="50" height="50" />
 							<header>
-								<h2>Quick Links</h2>
+								<h2><b>Quick Links</b></h2>
 							</header>
 							<br>
 							<ul>
 								<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
 								<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
+								<li><a href="unified-workplace.html">Unified workplace</a></li>
 							</ul>
 						</section>
 					</div>
@@ -172,21 +174,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
