--- a/data-center-cloud-solutions.html
+++ b/data-center-cloud-solutions.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/desktop.svg" alt="Data Center and Cloud Solutions" />
-					<h1><a href="#">Data Center and Cloud Solutions</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/dc-cloud.svg" alt="Data Center and Cloud Solutions" />
+					<h1><a href="#"><b>Data Center and Cloud Solutions</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -58,7 +59,7 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h3>Public, Private and Hybrid Cloud</h3>
+										<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Public, Private and Hybrid Cloud</b></h3>
 									</header>
 									<p>
 										Cloud computing comes in three forms:
@@ -78,7 +79,7 @@
 									</p>
 									<section>
 										<header>
-											<h3>Data Centre Management and Security</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Management and Security</b></h3>
 										</header>
 										<p>
 											Data is an organisation’s most important and critical assets and its effective management and usage is a key factor ensuring
@@ -87,7 +88,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Data Centre Automation</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Automation</b></h3>
 										</header>
 										<p>
 											Data Centre automation helps to provide a framework to achieve the business results you need, effectively.
@@ -97,7 +98,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Data Centre Optimization</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Optimization</b></h3>
 										</header>
 										<p>
 											Optimization refers to changing a data centre to improve its overall functionality and performance.
@@ -107,7 +108,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>BCP and DR</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; BCP and DR</b></h3>
 										</header>
 										<p>
 											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your business
@@ -118,7 +119,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Virtualization and Converged Infrastructure</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Virtualization and Converged Infrastructure</b></h3>
 										</header>
 										<p>
 											Data centre virtualization is the process of designing, developing and deploying a data centre on virtualization and
@@ -128,7 +129,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Storage and Backup</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Storage and Backup</b></h3>
 										</header>
 										<p>
 											As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
@@ -137,24 +138,26 @@
 										</p>
 									</section>
 								</article>
-							</div>
-							<div class="col-4 col-12-medium">
+								</div>
+								<div class="col-4 col-12-medium">
 
-								<section class="box">
-									<img src="images/link.svg" alt="Link" width="50" height="50" />
-									<header>
-										<h2>Quick Links</h2>
-									</header>
-									<br>
-									<ul>
-										<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
-										<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
-									</ul>
-								</section>
-							</div>
+									<section class="box">
+										<img src="images/link.svg" alt="Link" width="50" height="50" />
+										<header>
+											<h2><b>Quick Links</b></h2>
+										</header>
+										<br>
+										<ul>
+											<li><a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a></li>
+											<li><a href="cyber-security-solutions.html">Cyber Security</a></li>
+											<li><a href="unified-workplace.html">Unified workplace</a></li>
+										</ul>
+									</section>
+								</div>
 						</div>
 					</div>
 				</section>
+
 
 				<section id="footer">
 					<div class="container">
@@ -185,21 +188,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
