--- a/data-center-consulting.html
+++ b/data-center-consulting.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/server-client-exchange.svg" alt="Data Center Consulting" />
+					<h1><a href="#"><b>Data Center Consulting</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -58,23 +59,18 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h2>Introduction</h2>
+										<h2><b>Introduction</b></h2>
 									</header>
 									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
+										Data Center consulting are services focused towards optimizing Data Centre elements.
 										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
 										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
 										accelerating the completion of your design, consolidation and relocation.
 									</p>
 									</p>
-									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
-										<br>
-										<i>Fig.: Data Center Consulting Process</i>
-									</div>
 									<section>
 										<header>
-											<h3>Data Centre Design and Assessment</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Centre Design and Assessment</b></h3>
 										</header>
 										<p>
 											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
@@ -94,7 +90,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Deliverables</h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables</b></h3>
 										</header>
 										<p>
 											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
@@ -109,7 +105,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Data Center Build Out</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Build Out</b></h3>
 										</header>
 										<p>
 										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
@@ -125,7 +121,7 @@
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
-										<h2>Quick Links</h2>
+										<h2><b>Quick Links</b></h2>
 									</header>
 									<br>
 									<ul>
@@ -172,21 +168,20 @@
 									</ul>
 								</section>
 							</div>
+							
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
