--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 		<script src="assets/js/flickity.pkgd.min.js"></script>
 	</head>
 
-
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 				<section id="header" class="main-header">
-					<img src="images/logo.jpg" alt="yashasvi logo" class="landing" />
-						<h1><a href="index.html"><b>Yashasvi Information Solutions</b></a></h1>
-						<h3><b><a href="index.html"><b><i>Let's simplify..</i></b></a></b></h3>
+						<img src="images/main-logo.jpg" alt="yashasvi logo" class="landing" width="120" height="80" />
+							<h1><a href="index.html"><b>Yashasvi Information Solutions</b></a></h1>
+							<h3><b><a href="index.html"><b><i>Let's simplify..</i></b></a></b></h3>
 
 						<div class="full-nav">
 						<nav id="nav">
@@ -47,6 +46,7 @@
 								<div class="dropdown-content">
 									<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 									<a href="cyber-security-solutions.html">Cyber Security</a>
+									<a href="unified-workplace.html">Unified Workplace</a>
 								</div>
 							</div>
 
@@ -78,8 +78,8 @@
 										<header>
 											<h2><b>Who are we?</b></h2>
 										</header>
-										<p><b>Yashasvi’s vision is to be a one of the formidable names in IT Infrastructure consulting.
-											To provide quality of service and enable customers adopt “Technology for business sake” that brings in direct business benefits.</b></p>
+										<p class="left"><b>Yashasvi’s vision is to be a one of the formidable names in IT Infrastructure consulting.
+											To provide quality of service and enable customers adopt “technology for business sake” that brings in direct business benefits.</b></p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -95,7 +95,7 @@
 											<li><b>Data Center Automation</b></li>
 											<li><b>BCP/DR</b></li>
 											<li><b>Network and Collaboration</b></li>
-											<li><b>Comliute, Storage and Backuli</b></li>
+											<li><b>Compute, Storage and Backup</b></li>
 											<li><b>End User Computing</b></li>
 									</ol>
 									</section>
@@ -115,12 +115,6 @@
 									</section>
 								</div>
 							</div>
-							<footer>
-								<ul class="actions">
-									<!-- <li><a href="#" class="button large">Get Started</a></li> -->
-									<li><a href="#" class="button alt large">Learn More</a></li>
-								</ul>
-							</footer>
 						</section>
 				</section>
 
@@ -135,66 +129,132 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
+													<img class="portfolio-images" width="200" height="200" src="images/network.svg" alt="Data Center Consulting" /><br>
 													<header>
-														<h3><b>Data Center Consulting</b></h3>
+														<div class="center">
+															<h3><b>Data Center Consulting</b></h3>
+														</div>
+														<br>
 													</header>
-													<p><b>Data Centre consulting are services focused towards optimizing Data Centre elements.
+													<p><b>Data center consulting are services focused towards optimizing Data Centre elements.
 														Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
 														Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and accelerating the completion of your design, consolidation and relocation.</b></p>
 													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="data-center-consulting.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Cloud Consulting" />
+													<img class="portfolio-images" width="200" height="200" src="images/data-index.svg" alt="Cloud Consulting" /><br>
 													<header>
-														<h3><b>Cloud Consulting</b></h3>
+														<div class="center">
+															<h3><b>Cloud Consulting</b></h3>
+														</div>
+														<br>
 													</header>
-													<p><b>Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
+													<p><b>Design and build a cloud adoption roadmap and define a customized business service catalog together with deployment options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
 												   	Some of the services include: Readiness assessment, Implelemtation and migration services, etc.
 													<br><br>
 													</b></p>
 													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="cloud-consulting.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/database.svg" alt="IT Transformation" />
+													<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="IT Transformation" /><br>
 													<header>
+														<div class="center">
 														<h3><b>IT Transformation</b></h3>
+													</div>
+														<br>
 													</header>
 													<p><b>The objective of this service is to determine the “healthiness of the existing IT environment, recommend appropriate processes for service improvement and suggest areas for automation (if any)”.
 														The Scope of work for the IT infrastructure assessment is focused on the following operational towers (identified services/ functional areas).
 													<br><br>
 													</b></p>
 													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="it-transformation.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<img class="portfolio-images" width="200" height="200" src="images/connectdevelop.svg" alt="Network and Collaboration" />
+													<img class="portfolio-images" width="200" height="200" src="images/network-index.svg" alt="Network and Collaboration" /><br>
 													<header>
-														<h3><b>Network and Collaboration</b></h3>
+														<div class="center">
+															<h3><b>Network and Collaboration</b></h3>
+														</div>
+														<br>
 													</header>
 													<p><b>This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that are building a new network or redesigning an existing Data and Voice infrastructure.
 														They work directly with your organization’s management and operations staffs to understand your network objectives in order to recommend industry best practices and the solutions and technologies that apply to your network environment.</b></p>
 													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="network-collab.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<img class="portfolio-images" width="200" height="200" src="images/backup.svg" alt="Compute, Storage & Backup" /><br>
+													<header>
+														<h3><b>Compute, Storage & Backup</b></h3>
+														<br>
+													</header>
+													<p><b>
+														As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
+														This service is focused towards new or customers who are looking to redesigning their existing environment. Our consultants will
+														understand the business requirement, application landscape and provide a blueprint of Compute, Storage and Backup infrastructure.
+														<br><br>
+													</b></p>
+													<footer>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="compute-storage-backup.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<img class="portfolio-images" width="200" height="200" src="images/security.svg" alt="Cyber Security" /><br>
+													<header>
+														<div class="center">
+															<h3><b>Cyber Security</b></h3>
+														</div>
+														<br>
+													</header>
+													<p><b>
+														Yashasvi understands the high costs and challenges of safeguarding today’s complex and rapidly changing IT environment.
+														Digital transformation and Cloud are pushing security perimeters off premises, into the cloud, and into the workplace.
+														Enforcement of security policies have become more complex and requires understanding of risk and balancing the innovation.
+														Areas of expertise: Enterprise Security, Data Security, Emerging Security.
+													</b></p>
+													<footer>
+														<div class="center">
+															<ul class="actions">
+																<li><a href="cyber-security-solutions.html" class="button alt">Find out more</a></li>
+															</ul>
+														</div>
 													</footer>
 												</section>
 											</div>
@@ -313,21 +373,20 @@
 									</ul>
 								</section>
 							</div>
+							
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
