--- a/it-transformation.html
+++ b/it-transformation.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/database.svg" alt="Cloud Consulting" />
-					<h1><a href="#">IT Transformation</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/it-trans.svg" alt="IT Transformation" />
+					<h1><a href="#"><b>IT Transformation</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -57,17 +58,9 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<!-- <header>
-										<h2>Introduction</h2>
-									</header>
-									<div class="center">
-										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
-										<br>
-										<i>Fig.: Cloud Consulting Services</i>
-									</div> -->
 									<section>
 										<header>
-											<h3>IT Transformation Process</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; IT Transformation Process</b></h3>
 										</header>
 										<p>
 											The objective of this service is to determine the “healthiness of the existing IT environment, recommend
@@ -78,8 +71,8 @@
 										<ul>
 											<li>Server (UNIX & NT) & Storage management</li>
 											<li>Datacenter (Production) operations / ITIL process</li>
-											<li>Network (WAN/LAN) Management</li>
-											<li>Database Management</li>
+											<li>Network (WAN/LAN) management</li>
+											<li>Database management</li>
 											<li>Messaging</li>
 											<li>Information Security</li>
 											<li>Disaster recovery and Business Continuity Processes</li>
@@ -89,7 +82,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Deliverables:</h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
 										</header>
 										<p>
 											The final report, at a broad level would consist of:
@@ -100,14 +93,14 @@
 											<li>Potential areas for service improvement and benefits</li>
 											<li>Processes for on-premise and cloud based infrastructure</li>
 											<li>Standardization of processes</li>
-											<li>Tips on effective IT Management</li>
+											<li>Tips on effective IT management</li>
 											<li>Potential areas for automation</li>
 										</ul>
 										<hr>
 									</section>
 									<section>
 										<header>
-											<h3>Data Centre Consolidation</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Consolidation</b></h3>
 										</header>
 										<p>
 											Sprawling servers, operating and storage systems, and desktop applications create a costly and complex IT environment.
@@ -120,13 +113,13 @@
 											very short period of time.
 										</p>
 										<header>
-											<h3>Deliverables:</h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Deliverables:</b></h3>
 										</header>
 										<ul>
-											<li>Business case for Server consolidation as the first step</li>
+											<li>Business case for server consolidation as the first step</li>
 											<li>Baseline the existing server environment</li>
 											<li>Server utilization statistics based on peak business cycle</li>
-											<li>Consolidated Server roadmap</li>
+											<li>Consolidated server roadmap</li>
 											<li>Cloud roadmap and integration of various work loads</li>
 											<li>ROI/TCO information</li>
 										</ul>
@@ -134,7 +127,7 @@
 									<hr>
 									<section>
 										<header>
-											<h3>Data Centre Relocation</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Center Relocation</b></h3>
 										</header>
 										<p>
 											As part of this service we will seamlessly relocate your Data Centre to a new facility through a well-defined
@@ -148,7 +141,7 @@
 												This methodology will be suggested for application which cannot tolerate any downtime during relocation.</li>
 										</ul>
 										<header>
-											<h3>Our Approach:</h3>
+											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Our Approach:</b></h3>
 										</header>
 										<p>
 											Yashasvi will ensure that the entire relocation exercise is seamless through a range of structured activities which include:
@@ -168,7 +161,7 @@
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
-										<h2>Quick Links</h2>
+										<h2><b>Quick Links</b></h2>
 									</header>
 									<br>
 									<ul>
