--- a/cloud-consulting.html
+++ b/cloud-consulting.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Cloud Consulting" />
-					<h1><a href="#">Cloud Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/server-cloud.svg" alt="Cloud Consulting" />
+					<h1><a href="#"><b>Cloud Consulting</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -58,16 +59,11 @@
 							<div class="col-8 col-12-medium">
 								<article class="box post">
 									<header>
-										<h2>Introduction</h2>
+										<h2><b>Introduction</b></h2>
 									</header>
-									<div class="center">
-										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
-										<br>
-										<i>Fig.: Cloud Consulting Services</i>
-									</div>
 									<section>
 										<header>
-											<h3>Architecture and Design Services</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Architecture and Design Services</b></h3>
 										</header>
 										<p>
 											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence
@@ -89,7 +85,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Cloud Readiness Consulting Services</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Cloud Readiness Consulting Services</b></h3>
 										</header>
 										<p>
 											Cloud assessment is a comprehensive review of overall Cloud transformation to keep pace with cloud growth.
@@ -115,7 +111,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Implementation & Migration Services</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Implementation & Migration Services</b></h3>
 										</header>
 										<p>
 											Yashasvi helps you establish and migrate to a cloud foundation for the delivery of elastic, self-service infrastructure
@@ -141,7 +137,7 @@
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
-										<h2>Quick Links</h2>
+										<h2><b>Quick Links</b></h2>
 									</header>
 									<br>
 									<ul>
@@ -188,21 +184,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
