--- a/compute-storage-backup.html
+++ b/compute-storage-backup.html
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/archive.svg" alt="Compute, Storage and Backup" />
-					<h1><a href="#">Compute, Storage and Backup</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Compute, Storage and Backup" />
+					<h1><a href="#"><b>Compute, Storage and Backup</b></a></h1>
 					<div class="full-nav">
 					<nav id="nav">
 
@@ -37,6 +37,7 @@
 							<div class="dropdown-content">
 								<a href="data-center-cloud-solutions.html">Data Center and Cloud Solutions</a>
 								<a href="cyber-security-solutions.html">Cyber Security</a>
+								<a href="unified-workplace.html">Unified Workplace</a>
 							</div>
 						</div>
 
@@ -45,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -57,18 +58,9 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<header>
-										<h2>Introduction</h2>
-									</header>
-									<div class="center">
-										<img src="images/compute-storage-backup.png" alt="Compute, Storage and Backup" width="800" height="400" />
-										<br>
-										<i>Fig.: Compute, Storage and Backup</i>
-									</div>
-									<br>
 									<section>
 										<header>
-											<h3>Architecture and Design Services</h3><br>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Architecture and Design Services</b></h3>
 										</header>
 										<p>
 											As part of this service Yashasvi will provide a comprehensive architecture and design of Compute, Storage and Backup environment.
@@ -78,7 +70,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Storage Assessment</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Storage Assessment</b></h3>
 										</header>
 										<p>
 											Storage assessment is a comprehensive review of overall storage infrastructure to keep pace with storage growth. The objective of
@@ -100,7 +92,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Backup Assessment</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Backup Assessment</b></h3>
 										</header>
 										<p>
 											The primary objective of this service is to assess the existing backup and recovery environment to ensure compliance, data integrity and
@@ -120,7 +112,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>High Availability and HPC Assessment</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; High Availability and HPC Assessment</b></h3>
 										</header>
 										<p>
 											This service is aimed at customers who are looking to Assess and implement High availability Services for their critical
@@ -139,7 +131,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Virtualization Assessment</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Virtualization Assessment</b></h3>
 										</header>
 										<p>
 											The objective of this service is to architect/implement the virtualization services. Compute Virtualization has disrupted
@@ -155,7 +147,7 @@
 									</section>
 									<section>
 										<header>
-											<h3>Data Migration</h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Data Migration</b></h3>
 										</header>
 										<p>
 											This service offering provides significant customer value by engaging experienced Yashasvi professionals to develop a
@@ -185,7 +177,7 @@
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
-										<h2>Quick Links</h2>
+										<h2><b>Quick Links</b></h2>
 									</header>
 									<br>
 									<ul>
@@ -232,21 +224,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-										<!-- This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us! -->
-										This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
