--- a/unified-workplace.html
+++ b/unified-workplace.html
@@ -46,7 +46,7 @@
 						</div>
 
 						<div class="dropdown">
-							<a class="dropbtn" href="#">Contact</a>
+							<a class="dropbtn" href="contact.html">Contact</a>
 						</div>
 					</nav>
 				</div>
@@ -63,7 +63,7 @@
 									</header>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Workplace</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Workplace</b></h3>
 										</header>
 										<p>
 											This Solution offering can help streamline majority of intricacy involved in managing to end-user needs
@@ -88,7 +88,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Mobility</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Mobility</b></h3>
 										</header>
 										<p>
 											This Enterprise Mobility solutions offering can help streamline majority of complexities involved to gain the
@@ -100,7 +100,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Workplace Security</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Workplace Security</b></h3>
 										</header>
 										<p>
 											This Workplace Security Solution offering can help to protect the workplace by safeguarding the assets and employees
@@ -111,7 +111,7 @@
 									</section>
 									<section>
 										<header>
-											<img class="point "src="images/hand-finger-pointing-to-right.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Communication and Collaboration</b></h3>
+											<img class="point "src="images/push-pin.svg" alt="point" width="25" height="25" /><h3><b>&nbsp; Unified Communication and Collaboration</b></h3>
 										</header>
 										<p>
 											Yashasvi can offer the solutions to unify the communications into single solution for the enterprises.
@@ -171,18 +171,20 @@
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2><b>More about Yashasvi?</b></h2>
+										<h2><b>Yashasvi in the News?</b></h2>
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p><b>
-											This is some placeholder content.
+										Yashasvi Information Solutions Pvt. Ltd. was featured in <i>Silicon India</i> magazine's 10 most promising
+										Cisco service providers. To read more, follow the link below:
 									</b></p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://technology.siliconindiamagazine.com/ranking/10-most-promising-cisco-sservice-providers–-2017-rid-187.html" class="button"><b>Cisco Top 10 - Yashasvi</b></a></li>
 										</ul>
 									</footer>
 								</section>
